--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
     <activity
-      android:name=".main.MainActivity"
+      android:name=".main.view.MainActivity"
       android:label="@string/title_activity_main"
       android:theme="@style/AppTheme.NoActionBar">
       <intent-filter>
