--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -22,8 +22,8 @@ android {
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
   testCompile 'junit:junit:4.12'
-  compile project(':basketballdata')
-  compile project(':domain')
+  compile project(':basketballdomain')
+  compile project(':data')
   compile 'com.android.support:appcompat-v7:23.1.1'
   compile 'com.android.support:design:23.1.1'
   compile 'com.github.clans:fab:1.6.1'
